# dream-replay-cli

./: .gitattributes  .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
data/ledger/: run-2026-W25.jsonl
decisions/: DEC-001-promotion-gate-rules.md
docs/: METHODOLOGY.md  first-pr.md
dream_replay_cli/: __init__.py  __main__.py  cli.py  ledger.py  report.py  score.py
dreams/2026-W25/: candidate_memory.md  candidate_skills.md  candidate_spec_amendments.md  candidate_tests.md  index.json
schemas/: dream.schema.json
scripts/: spec_check.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-runnable-cli/: acceptance.md  design.md  requirements.md  tasks.md
src/dreamreplay/: __init__.py  __main__.py  cli.py  models.py
src/dreamreplay/ingest/: decision_ledger.py  spec_ledger.py  trace_loader.py
src/dreamreplay/render/: dreams_dir.py
src/dreamreplay/synthesize/: candidate_memory.py  candidate_skills.py  candidate_spec_amendments.py  candidate_tests.py
tests/: conftest.py  test_determinism.py  test_end_to_end.py  test_ingest_decisions.py  test_ingest_specs.py  test_ingest_traces.py  test_render.py  test_show.py  test_synthesize.py
tests/fixtures/portfolio_sample/decisions/: DEC-001-example.md
tests/fixtures/portfolio_sample/traces/: event_log_2026-W25.jsonl
(+1 files in other folders)
