[project]
name = "dreamreplay"
version = "0.1.0"
description = "Offline-cognition CLI: ingest traces + ledgers, emit weekly dream candidates."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vignesh Gopalakrishnan" }]
dependencies = [
    "click>=8.1",
    "jsonschema>=4.21",
]

[project.scripts]
dreamreplay = "dreamreplay.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamreplay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
